# dataload-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: batch_function.rs  cache.rs  lib.rs  loader.rs  loader_op.rs  loader_worker.rs  worker_stats.rs
tests/: loader.rs
